--- a/Rcode/PCA_percept_space_all_subjects.Rmd
+++ b/Rcode/PCA_percept_space_all_subjects.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "PCA iterative + PCA"
-author: "ALS + Aya"
+author: "ALS"
 date: "17/10/2022"
 ---
 ```{r include = FALSE}
@@ -15,51 +15,7 @@ setwd("~/Documents/Perceptual_Space_ALS/")
 path1 <- ("df_pca/")
 ```
 
-Example of an iterative PCA followed by a PCA
-
-```{r}
-filename <- paste(path1,"evals_su=S01-BCS_stim=odor_scaled.csv",sep = "")
-essai_pca <- read_csv(filename, show_col_types = FALSE)
-comp <- imputePCA(essai_pca[4:7], ncp = 2, scale = TRUE)
-df_new <- cbind(essai_pca[1:3], comp$completeObs)
-
-res.PCA<-PCA(df_new[3:7], quali.sup=c(1), graph = FALSE)
-pca_df <- cbind(essai_pca[1:3], res.PCA$ind)
-sum_df <- as.data.frame(res.PCA$eig) #summary(res.PCA)
-
-#Find the subset of points on the convex hull of data
-hpts <- chull(pca_df[4:5])
-hpts <- c(hpts, hpts[1])
-{plot(pca_df[4:5], cex = 0.5)
-pts <- pca_df[4:5][hpts,]
-lines(pts)}
-
-#Create polygon & compute surface
-chull.poly <- Polygon(pts, hole=F)
-chull.area <- chull.poly@area
-sum_df['surf poly'] <- chull.area #summary(res.PCA)
-
-#Compupte mean dist and circle area
-radius <- mean(pca_df$dist)
-sum_df['surf circle'] <- pi*(radius^2)
-
-fname2 <- str_replace(filename, "_scaled", "_ALLDATA")
-fname3 <- str_replace(filename, "_scaled", "_PCA")
-fname4 <- str_replace(filename, "_scaled", "_PCA_sum")
-
-write.csv(df_new, fname2)
-write.csv(pca_df, fname3)
-write.csv(sum_df, fname4)
-```
-
-Check the PCA projections for variables and individuals
-
-```{r}
-plot.PCA(res.PCA, choix = "var", habillage = 'cos2', title = " ")
-plot.PCA(res.PCA, col.ind="white", col.quali="blue")
-```
-
-We now do the same thing for all subjects and for all sensory modalities:
+Compute PCA + dispersion + save data
 
 ```{r include = FALSE}
 
@@ -87,20 +43,26 @@ for (i in 1:length(all_fnames)){
   
   pca_df <- cbind(essai_pca[1:3], res.PCA$ind)
   sum_df <- as.data.frame(res.PCA$eig) #summary(res.PCA)
-
-  #Find the subset of points on the convex hull of data
+  
+  #Find the subset of points and plot the convex hull
   hpts <- chull(pca_df[4:5])
   hpts <- c(hpts, hpts[1])
-  pts <- pca_df[4:5][hpts,]
+  pts <- pca_df[hpts,]
 
   #Create polygon & compute surface
-  chull.poly <- Polygon(pts, hole=F)
+  chull.poly <- Polygon(pts[4:5], hole=F)
   chull.area <- chull.poly@area
   sum_df['surf poly'] <- chull.area #summary(res.PCA)
 
   #Compute mean dist and circle area
   radius <- mean(pca_df$dist)
+  x0 <- mean(pca_df$coord.Dim.1)
+  y0 <- mean(pca_df$coord.Dim.2)
+  sum_df %>% add_column(c_x0 = x0, c_y0 = y0, c_r = radius)
   sum_df['surf circle'] <- pi*(radius^2)
+  sum_df['x0'] <- x0
+  sum_df['y0'] <- y0
+  sum_df['radius'] <- radius
 
   fname3 <- str_replace(filename, "_scaled", "_PCA")
   fname4 <- str_replace(filename, "_scaled", "_PCA_sum")
