--- a/Rcode/PCA_percept_space_all_stims_subjects.Rmd
+++ b/Rcode/PCA_percept_space_all_stims_subjects.Rmd
@@ -1,8 +1,14 @@
 ---
-title: "PCA iterative + PCA"
+title: "PCA - 3 modalities together"
 author: "ALS"
-date: "17/10/2022"
+date: "21/10/2022"
 ---
+`
+```{r setup, include=FALSE, echo=FALSE}
+require("knitr")
+opts_knit$set(root.dir = "~/Documents/Perceptual_Space_ALS/")
+```
+
 ```{r include = FALSE}
 library(Factoshiny)
 library(dplyr)
@@ -11,7 +17,7 @@ library(readr)
 library(stringr)
 library(missMDA)
 library(sp)
-setwd("~/Documents/Perceptual_Space_ALS/")
+#setwd("~/Documents/Perceptual_Space_ALS/")
 path1 <- ("df_pca/")
 ```
 
@@ -19,55 +25,46 @@ Compute PCA + dispersion + save data
 
 ```{r include = FALSE}
 
-all_fnames <- list.files(path = path1, pattern = "scaled.csv")
+all_fnames <- list.files(path = path1, pattern = "ALL_ALLDATA.csv")
 
 for (i in 1:length(all_fnames)){
-  
+
   filename <- paste(path1, all_fnames[i], sep = "")
-  fname2 <- str_replace(filename, "_scaled", "_ALLDATA")
-
-  essai_pca <- read_csv(filename, show_col_types = FALSE)
-
-  if (any(is.na(essai_pca)) == TRUE){
-    comp <- imputePCA(essai_pca[4:7], ncp = 2, scale = TRUE)
-    df_new <- cbind(essai_pca[1:3], comp$completeObs)
-    res.PCA<-PCA(df_new[3:7], quali.sup=c(1), graph = FALSE)
-    fname2 <- str_replace(filename, "_scaled", "_ALLDATA")
-    write.csv(df_new, fname2)
-    }
   
-  else{
-    res.PCA<-PCA(essai_pca[3:7],  quali.sup=c(1), graph = FALSE)
-    write.csv(essai_pca, fname2)
-    }
+  data_all <- read_csv(filename, show_col_types = FALSE)
+  res.PCA<-PCA(data_all[c(2,4:7)], quali.sup=c(1), graph = TRUE)
   
-  pca_df <- cbind(essai_pca[1:3], res.PCA$ind)
-  sum_df <- as.data.frame(res.PCA$eig) #summary(res.PCA)
+  #plot.PCA(res.PCA, col.ind = "red",col.quali = "blue")
+  #plotellipses(res.PCA)
+  pca_df <- cbind(data_all[1:3], res.PCA$ind)
+  sum_df <- as.data.frame(res.PCA$eig) #summary(res.PCA), dimdesc(res.PCA)
   
-  #Find the subset of points and plot the convex hull
-  hpts <- chull(pca_df[4:5])
-  hpts <- c(hpts, hpts[1])
-  pts <- pca_df[hpts,]
-
-  #Create polygon & compute surface
-  chull.poly <- Polygon(pts[4:5], hole=F)
-  chull.area <- chull.poly@area
-  sum_df['surf poly'] <- chull.area #summary(res.PCA)
-
-  #Compute mean dist and circle area
-  radius <- mean(pca_df$dist)
-  x0 <- mean(pca_df$coord.Dim.1)
-  y0 <- mean(pca_df$coord.Dim.2)
-  sum_df %>% add_column(c_x0 = x0, c_y0 = y0, c_r = radius)
-  sum_df['surf circle'] <- pi*(radius^2)
-  sum_df['x0'] <- x0
-  sum_df['y0'] <- y0
-  sum_df['radius'] <- radius
-
-  fname3 <- str_replace(filename, "_scaled", "_PCA")
-  fname4 <- str_replace(filename, "_scaled", "_PCA_sum")
+  stims = c('odor','face','music')
   
-  write.csv(pca_df, fname3)
-  write.csv(sum_df, fname4)
+  for (s in 1:length(stims)){
+    df_n <- pca_df %>% filter(stimulus_type == stims[s])
+    
+    #Find the subset of points and plot the convex hull
+    hpts <- chull(df_n[4:5])
+    hpts <- c(hpts, hpts[1])
+    pts <- df_n[hpts,]
+    
+    #Create polygon & compute surface
+    chull.poly <- Polygon(pts[4:5], hole=F)
+    chull.area <- chull.poly@area
+    sum_df[paste('surf poly ',stims[s])] <- chull.area #summary(res.PCA)
+    
+    #Compute centroid coordinates (dist + area calculations done in Python)
+    x0 <- mean(df_n$coord.Dim.1)
+    y0 <- mean(df_n$coord.Dim.2)
+    sum_df[paste('x0 ',stims[s])] <- x0
+    sum_df[paste('y0 ',stims[s])] <- y0
   }
+  
+  fname2 <- str_replace(filename, "_ALLDATA", "_ALL_PCA")
+  fname3 <- str_replace(filename, "_ALLDATA", "_ALL_PCA_sum")
+  
+  write.csv(pca_df, fname2)
+  write.csv(sum_df, fname3)
+}
 ```
